--- a/RealEstateApp/Views/AddEditPropertyPage.xaml
+++ b/RealEstateApp/Views/AddEditPropertyPage.xaml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
     x:Class="RealEstateApp.Views.AddEditPropertyPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
@@ -18,7 +18,7 @@
     </ContentPage.Resources>
 
     <ContentPage.ToolbarItems>
-        <ToolbarItem Command="{Binding ToggleFlashlightCommand}" IconImageSource="lightbulb_solid.svg" />
+        <ToolbarItem Command="{Binding ToggleFlashlightCommand}" IconImageSource="{FontImage &#xf0eb;, FontFamily=FA-solid,Size=24}" />
         <ToolbarItem Command="{Binding CancelSaveCommand}" Text="Cancel" />
         <ToolbarItem Command="{Binding SavePropertyCommand}" Text="Save" />
     </ContentPage.ToolbarItems>
