--- a/RealEstateApp/App.xaml
+++ b/RealEstateApp/App.xaml
@@ -10,6 +10,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <converters:StringBoolConverter x:Key="stringBoolConverter" />
+            <converters:PercentageConverter x:Key="percentageConverter" />
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
