--- a/RealEstateApp/AppShell.xaml
+++ b/RealEstateApp/AppShell.xaml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+﻿<?xml version="1.0" encoding="UTF-8" ?>
 <Shell
     x:Class="RealEstateApp.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
@@ -20,6 +20,11 @@
         Title="Barcode Scanner"
         ContentTemplate="{DataTemplate views:BarcodeScannerPage}"
         Route="barcodeScanner" />
+
+    <ShellContent
+        Title="Settings"
+        ContentTemplate="{DataTemplate views:SettingsPage}"
+        Route="settings" />
 
     <ShellContent
         Title="About"
